# msquic

./: CMakeLists.txt  seeddata.json  tests.json
.github/workflows/: build.yml  bvt.yml  cargo.yml  codeql-analysis.yml  docker-publish.yml  plugins.yml  scorecards-analysis.yml  stress.yml
data/main/b4819f2/: wan_data.json
data/main/bb044fe/: wan_data.json
data/main/e057794/: wan_data.json
src/core/: library.c  packet_space.c
src/inc/: msquic.h  msquiccpp.h  msquiccpp_kernel.h
src/platform/: tls_openssl.c
src/tools/: CMakeLists.txt
src/tools/chat/clientlib/: CMakeLists.txt  client.cpp  client.h  quicchatclientlib.def
src/tools/chat/clienttest/: CMakeLists.txt  client.cpp
src/tools/chat/server/: CMakeLists.txt  msquicpublichelper.h  server.cpp
src/tools/sample/: CMakeLists.txt  sample.cpp
src/tools/samplecpp/: CMakeLists.txt  sample.cpp
src/tools/spin/: spinquic.cpp
tests/loopback/16k/: results.csv
tests/loopback/4k/: results.csv
